[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "initiate"
version = "0.3.0"
description = "Universal Python runtime bootstrapper with automatic dependency provisioning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Initiate" }]
keywords = ["runtime", "dependency", "bootstrap", "venv", "fastapi", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
initiate = "initiate.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://example.com/initiate"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["initiate*"]
